# first-1

./: .gitignore  AGENT_MEMORY.md  FINAL_ASSESSMENT.md  PHMEG_Paper_Outline.md  PROJECT_RECORD.md  acm_experiment.py  benchmark_experiments.py  ccfl_cifar100.py  ccfl_comprehensive.py  ccfl_dual_head.py  ccfl_ewc_hybrid.py  ccfl_experiment.py  ccfl_experiment_v2.py  ccfl_final_experiments.py  ccfl_gated.py  ccfl_sequential_replay.py  ccfl_theory.py  cogmem_full_results.json  cogmem_results.json  comprehensive_experiment.py  context_dependent_experiment.py  continual_learning_benchmark.py  demo.py  experiments.py  final_experiment.py  fuzzy_context_experiment.py  honest_paper_experiments.py  ijcnn_experiment.py  key_experiment.py  ndam_experiment.py  optimal_experiments.py  paper_ccfl_ijcnn.tex  paper_experiments.py  real_data_experiments.py  requirements.txt  retrieval_quality_experiment.py  run_cifar100_gpu.py  split_mnist_benchmark.py
neurobrain/: __init__.py  demo.py  demo_complete.py  pyproject.toml  reality_check.py  research_experiment.py  research_roadmap.py
neurobrain/applications/: demo_simple.py  embodied_env.py  embodied_trainer.py  simple_trainer.py  train_embodied.py
neurobrain/core/: __init__.py  amygdala.py  brain.py  hippocampus.py  neocortex.py
neurobrain/examples/: basic_usage.py
neurobrain/learning/: __init__.py  hebbian.py  stdp.py
neurobrain/memory/: __init__.py  dialog_memory.py  long_term_memory.py  short_term_memory.py  thinking_memory.py  working_memory.py
neurobrain/neurons/: __init__.py  neuron.py  synapse.py
neurocortex/: config.py  (+1 more)
(+43 files in other folders)
